# monads-cpp

./: .clangd  CMakeLists.txt  README.md  compile_commands.json
examples/: expected.cpp  future.cpp  optional.cpp  variant.cpp
src/: expected.h  future.h  optional.h  variant.h
